--- a/wp-content/themes/floaat/assets/styles/components/_menu.scss
+++ b/wp-content/themes/floaat/assets/styles/components/_menu.scss
@@ -58,25 +58,22 @@
     opacity: 0;
     transition: 1s;
 
-    a {
-      text-decoration: none;
-
-      &:hover {
-        color: $bg-clients-gallery;
+    li {
+      a {
+        display: inline-block;
+        color: $white;
+        text-decoration: none;
+        position: relative;
+        padding: 14px 0;
+        font-family: 'Muli', sans-serif;
+        font-weight: 300;
+        font-size: 40px;
+        line-height: 1;
+        letter-spacing: 0.040em;
+        &:hover {
+          color: $bg-clients-gallery;
+        }
       }
-    }
-
-    &__link {
-      display: inline-block;
-      color: $white;
-      text-decoration: none;
-      position: relative;
-      padding: 14px 0;
-      font-family: 'Muli', sans-serif;
-      font-weight: 300;
-      font-size: 40px;
-      line-height: 1;
-      letter-spacing: 0.040em;
 
       svg {
         fill: none;
