--- a/wp-content/themes/floaat/assets/styles/layouts/_client.scss
+++ b/wp-content/themes/floaat/assets/styles/layouts/_client.scss
@@ -82,12 +82,13 @@
 
   &__gallery {
     padding: 30px 0;
-    column-gap: 1em;
+    column-gap: 2em;
     position: relative;
     margin:auto;
     column-count:3;
     @include media-breakpoint-down(sm) {
-      column-count:1;
+      display: flex;
+      flex-direction: column;
     }
     &__col {
       @include make-col(7);
