--- a/wp-content/themes/floaat/assets/styles/main.scss
+++ b/wp-content/themes/floaat/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import "layouts/we_do";
 @import "layouts/team";
 @import "layouts/footer";
+@import "common/all_page";
 
 /**
  * Import npm dependencies
