new style by sub page fix js add sidebar

--- a/wp-content/themes/floaat/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/floaat/assets/styles/layouts/_footer.scss
@@ -1,7 +1,7 @@
 /* stylelint-disable */
 .footer {
   background-color: $purple;
-
+  flex: 0 0 auto;
   .text_btn {
     z-index: 2;
     color: $white;
