--- a/wp-content/themes/floaat/assets/styles/main.scss
+++ b/wp-content/themes/floaat/assets/styles/main.scss
@@ -7,6 +7,7 @@
 // css reset and global
 @import "common/reset";
 @import "common/global";
+@import "common/404";
 // main style
 @import "layouts/header";
 @import "layouts/hero_block";
