--- a/wp-content/themes/floaat/assets/styles/common/_all_page.scss
+++ b/wp-content/themes/floaat/assets/styles/common/_all_page.scss
@@ -82,95 +82,9 @@ article {
   @include make-col(12)
 }
 
-
-
-//.simple_space {
-//  padding-top: 90px;
-//  padding-bottom: 40px;
-//  background-color: $bg-clients;
-//}
-//
-//article {
-//  margin-bottom: 20px;
-//  background-color: $bg-clients!important;
-//}
-//
-//blockquote {
-//  background-color: $bg-clients;
-//  padding: 5px;
-//}
-//
-//input {
-//  outline: none;
-//
-//  &:focus {
-//    box-shadow: none !important;
-//  }
-//}
-//
-//.search-form {
-//  margin-bottom: 20px;
-//}
-//
-//.nav-links {
-//  a {
-//    color: $black;
-//  }
-//}
-//
-//.sidebar {
-//  color: $white;
-//}
-//
-//.site-content-custom {
-//  background-color: $bg-clients;
-//  padding-top: 120px;
-//}
-//
-//html{
-//  height: 100%;
-//}
-//
-//body{
-//  display: flex;
-//  flex-direction: column;
-//  height: 100%;
-//}
-//
-//.site-content, .site-content-custom{
-//  flex: 1 0 auto;
-//}
-//
-//footer{
-//  flex: 0 0 auto;
-//}
-//
-//input, textarea {
-//  border-radius: 5px;
-//  padding: 8px;
-//  border: 2px solid $purple;
-//}
-//
-//.content-404, .index {
-//  padding-bottom: 30px;
-//  min-height: 63vh;
-//}
-//
-//
-//.logged-in-as a {
-//  color: black;
-//  text-decoration: none;
-//}
-//
-//.post-inner {
-//  display: inline-block;
-//}
-//
-//.comment-form-comment label {
-//  display: block;
-//}
-//
-//.comment-list ol {
-//  list-style: none;
-//}
-
+.non_content {
+  font-size: 35px;
+  color: $purple;
+  text-align: center;
+  padding-top: 200px;
+}
